feat: ResultView 구현